Set-up a function to let the User input their name.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <h1>From the gateway of Introduction to Coding there are many paths.</h1>
 
     <div class="container">
-      <form id="trackSuggester">
+      <h1>What is your name?</h1>
 
+      <form id="trackSuggester">
         <div>
           <label for="seed">From a solid foundation their are many paths</label>
           <select class= 'form-control' id='seed'>
@@ -70,6 +71,11 @@
         </div>
         <button type="submit" class="btn">Your path leads to......</button>
       </form>
+      <div id="usrNm">
+        <p>
+          Based upon your choices <span class="name"></span>, Your end goals should be:
+        </p>
+      </div>
       <div id='outPut'>
 
       </div>
