added some text, working on fleshing out the questions.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link href="https://fonts.googleapis.com/css?family=Ewert|Space+Mono" rel="stylesheet">
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
@@ -27,18 +27,18 @@
     <div class="container">
       <form id="trackSuggester">
         <div>
-          <label for="seed">From a solid foundation their are many paths</label>
+          <label for="seed">From a solid foundation their are many paths.<br><span class="neophyte"></span> It all starts, with a seed. Before you are five identical doors, with names written above them. Please choose one.</label>
           <select class= 'form-control' id='seed'>
-            <option value = "1">Ruby</option>
-            <option value = "2">PHP</option>
-            <option value = "3">JAVA</option>
-            <option value = "4">CSS</option>
-            <option value = "5">C#</option>
+            <option value = "1">Yukihiro "Matz" Matsumoto</option>
+            <option value = "2">Dries Buytaert</option>
+            <option value = "3">Andy Rubin</option>
+            <option value = "4">Hakon Wium Lie</option>
+            <option value = "5">Anders Hejlsberg</option>
           </select>
         </div>
 
         <div>
-          <label for="sprout">From a solid foundation their are many paths</label>
+          <label for="sprout"><br><span class="neophyte"></span> From a solid foundation their are many paths</label>
           <select class= 'form-control' id='sprout'>
             <option value = "1">Ruby</option>
             <option value = "2">PHP</option>
