--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css" type="text/css"  charset="utf-8">
     <title>TrackSuggester</title>
   </head>
   <body>
@@ -16,13 +17,13 @@
       <div id="blanks">
         <form>
           <div class="form-group">
-            <label for="neophyte">A name</label>
+            <label for="neophyte">Please type in a name, and then press enter.</label>
             <input id="neophyte" class="form-control" type="text">
           </div>
         </form>
       </div>
 
-      <h1>Upon leaving the nest  of Introduction to Coding there are many paths one can travel.</h1>
+      <h2 class="intro">Upon leaving the nest  of Introduction to Coding there are many paths one can travel.</h2>
 
     <div class="container">
       <form id="trackSuggester">
@@ -38,13 +39,13 @@
         </div>
 
         <div>
-          <label for="sprout"><br><span class="neophyte"></span> From a solid foundation their are many paths</label>
+          <label for="sprout"><br><span class="neophyte"></span> Your new Guru smiles, and asks you to choose a tool.</label>
           <select class= 'form-control' id='sprout'>
-            <option value = "1">Ruby</option>
-            <option value = "2">PHP</option>
-            <option value = "3">JAVA</option>
-            <option value = "4">CSS</option>
-            <option value = "5">C#</option>
+            <option value = "1">A Swiss Army Knife.</option>
+            <option value = "2">A Microscope.</option>
+            <option value = "3">A Tablet.</option>
+            <option value = "4">A ladder.</option>
+            <option value = "5">A conductor's wand.</option>
           </select>
         </div>
 
@@ -62,7 +63,7 @@
         <div>
           <label for="matureOak"><span class="neophyte"></span>From a solid foundation their are many paths</label>
           <select class= 'form-control' id='matureOak'>
-            <option value = "1">Ruby</option>
+            <option value = "1"><img"src=img/ruby.png"</option>
             <option value = "2">PHP</option>
             <option value = "3">JAVA</option>
             <option value = "4">CSS</option>
