Adding Images for each of the survey questions.

--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
         </div>
 
         <div>
-          <label for="sapling">From a solid foundation their are many paths</label>
+          <label for="sapling">You are given a task of building a new house. What task do you complete first?</label>
           <select class= 'form-control' id='sapling'>
-            <option value = "1">Ruby</option>
-            <option value = "2">PHP</option>
-            <option value = "3">JAVA</option>
-            <option value = "4">CSS</option>
-            <option value = "5">C#</option>
+            <option value = "1">Place in the shipping containers into the foundation. No need to reinvent the wheel.</option>
+            <option value = "2">Grab a voltmeter, let's get this place wired!</option>
+            <option value = "3">Grab a cup of coffee, and just dive into foundation!</option>
+            <option value = "4">Plot out the new Color scheme, and label where the furniture and appliances are going to be placed.</option>
+            <option value = "5">Get to work on the foundation using famous standardized techniques. </option>
           </select>
         </div>
 
         <div>
-          <label for="matureOak"><span class="neophyte"></span>From a solid foundation their are many paths</label>
+          <label for="matureOak"><span class="neophyte"></span> You are offered a tool kit for the job, which is it?</label>
           <select class= 'form-control' id='matureOak'>
-            <option value = "1"><img"src=img/ruby.png"</option>
-            <option value = "2">PHP</option>
-            <option value = "3">JAVA</option>
-            <option value = "4">CSS</option>
-            <option value = "5">C#</option>
+            <option value = "1"> A swift favorite, with lots of handy features.</option>
+            <option value = "2">A commonly used, and rubust design.</option>
+            <option value = "3">One of the popular designs based upon a legacy of dependability.</option>
+            <option value = "4">I'll hire contractors thanks very much! Hand me a paint brush.</option>
+            <option value = "5">A standard &amp estblished design endorsed by an old King.</option>
           </select>
         </div>
 
