Added more content to my quiz

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Ewert|Space+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
@@ -39,7 +40,7 @@
         </div>
 
         <div>
-          <label for="sprout"><br><span class="neophyte"></span> Your new Guru smiles, and asks you to choose a tool.</label>
+          <label for="sprout"><br><span class="neophyte"></span> your new chosen Guru smiles, and asks you to choose a tool.</label>
           <select class= 'form-control' id='sprout'>
             <option value = "1">A Swiss Army Knife.</option>
             <option value = "2">A Microscope.</option>
@@ -50,7 +51,7 @@
         </div>
 
         <div>
-          <label for="sapling">You are given a task of building a new house. What task do you complete first?</label>
+          <label for="sapling"> you are given a task of building a new house. What task do you complete first?</label>
           <select class= 'form-control' id='sapling'>
             <option value = "1">Place in the shipping containers into the foundation. No need to reinvent the wheel.</option>
             <option value = "2">Grab a voltmeter, let's get this place wired!</option>
@@ -61,7 +62,7 @@
         </div>
 
         <div>
-          <label for="matureOak"><span class="neophyte"></span> You are offered a tool kit for the job, which is it?</label>
+          <label for="matureOak"><span class="neophyte"></span> you are offered a tool kit for the job, which is it?</label>
           <select class= 'form-control' id='matureOak'>
             <option value = "1"> A swift favorite, with lots of handy features.</option>
             <option value = "2">A commonly used, and rubust design.</option>
@@ -72,24 +73,21 @@
         </div>
 
         <div>
-          <label for="snag">From a solid foundation their are many paths</label>
+          <label for="snag"> after hours of toiling you're well on your way to having a finished: .</label>
           <select class= 'form-control' id='snag'>
-            <option value = "1">Ruby</option>
-            <option value = "2">PHP</option>
-            <option value = "3">JAVA</option>
-            <option value = "4">CSS</option>
-            <option value = "5">C#</option>
+            <option value = "1">A designer home based upon the latest models.</option>
+            <option value = "2">A hidden lair.</option>
+            <option value = "3">A mobile home</option>
+            <option value = "4">A prefab with decorated with the amazing design accents</option>
+            <option value = "5">A custom design based upon the styles of some well known architect.</option>
           </select>
         </div>
-        <button type="submit" class="btn">Your path leads to......</button>
+        <button type="submit" class="btn">....Click Me :) ..</button>
       </form>
     </div>
-
     <div id='outPut'>
-
-
-      </div>
     </div>
+    <img src="img/acron.jpg">
 
   </body>
 </html>
